Update 'xsxwab2n0-go' component image to: quay.io/rhtaptestqa/rhtap-qe:e00ea274ffd84be750fdf325f70a6fae2731208a@sha256:8d937a9f6b70ace3d2e90198caa878edc7dad49688195cd50c6110fcfbe25609

--- a/components/xsxwab2n0-go/overlays/development/deployment-patch.yaml
+++ b/components/xsxwab2n0-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: xsxwab2n0-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtaptestqa/rhtap-qe:e00ea274ffd84be750fdf325f70a6fae2731208a@sha256:8d937a9f6b70ace3d2e90198caa878edc7dad49688195cd50c6110fcfbe25609
+          name: container-image
